1.9.13.dev0
 * #1001: Fix a ZFS error during snapshot cleanup.
 * #1003: In the Zabbix monitoring hook, support Zabbix 7.2's authentication changes.
 * #1009: Send database passwords to MariaDB and MySQL via anonymous pipe, which is more secure than
   using an environment variable.
 * Add a "verify_tls" option to the Uptime Kuma monitoring hook for disabling TLS verification.

1.9.12
 * #1005: Fix the credential hooks to avoid using Python 3.12+ string features. Now borgmatic will
   work with Python 3.9, 3.10, and 3.11 again.

1.9.11
 * #795: Add credential loading from file, KeePassXC, and Docker/Podman secrets. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/provide-your-passwords/
 * #996: Fix the "create" action to omit the repository label prefix from Borg's output when
   databases are enabled.
 * #998: Send the "encryption_passphrase" option to Borg via an anonymous pipe, which is more secure
   than using an environment variable.
 * #999: Fix a runtime directory error from a conflict between "extra_borg_options" and special file
   detection.
 * #1001: For the ZFS, Btrfs, and LVM hooks, only make snapshots for root patterns that come from
   a borgmatic configuration option (e.g. "source_directories")—not from other hooks within
   borgmatic.
 * #1001: Fix a ZFS/LVM error due to colliding snapshot mount points for nested datasets or logical
   volumes.
 * #1001: Don't try to snapshot ZFS datasets that have the "canmount=off" property.
 * Fix another error in the Btrfs hook when a subvolume mounted at "/" is configured in borgmatic's
   source directories.

1.9.10
 * #966: Add a "{credential ...}" syntax for loading systemd credentials into borgmatic
   configuration files. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/provide-your-passwords/
 * #987: Fix a "list" action error when the "encryption_passcommand" option is set.